misc changes to fully dockerize and run on gcloud

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -2,7 +2,7 @@ runtime: custom
 env: flex
 
 env_variables:
-  BOKEH_ALLOW_WS_ORIGIN: "w210-rishi.uc.r.appspot.com"
+  BOKEH_ALLOW_WS_ORIGIN: "elrufaie-capstone.wl.r.appspot.com"
 
 resources:
   cpu: 2
