--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,13 @@
-#Flask==1.1.2
-#Bokeh==2.0.2
-#numpy==1.18.1
-
+#python
+#python-devel
 Flask==1.0.2
 Bokeh==2.1.1
-gunicorn==19.9.0
-Numpy==1.17.0
-requests==2.21.0
-pandas==0.25.3
-geopandas==0.8.0
+Numpy
+requests
+pyyaml
+#scikit-learn
+#matplotlib 
+lxml
+pandas
+geopandas
+jinja2
